Forgot the add the tablet media query last time. Fixed gradient on tablet and upwards

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -164,6 +164,10 @@ p {
 
       &:after {
         background: linear-gradient(180deg,  rgba(196, 196, 196, 0) 0%,#00F0FF 85.42%);
+
+        @include tablet {
+          background: linear-gradient(180deg, #00F0FF 0%, rgba(196, 196, 196, 0) 85.42%);
+        }
       }
     }
     
